opam-version: "2.0"
name: "aesynth"
maintainer: "amaloz@galois.com"
authors: "Alex J. Malozemoff"
license: "Beer-ware"
homepage: "https://github.com/amaloz/ae-generator"
depends: [
  "ocaml" {>= "4.07.0"}
  "core"
  "cryptokit"
  "dolog"
  "ocamlgraph"
  "dune" {build}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name]
]
synopsis: "Authenticated encryption prover / synthesizer"
