opam-version: "2.0"
name: "aesynth"
maintainer: "amaloz@galois.com"
authors: "Alex J. Malozemoff"
license: "Beer-ware"
homepage: "https://github.com/amaloz/ae-generator"
bug-reports: "https://github.com/amaloz/ae-generator/issues"
depends: [
  "ocaml" {>= "4.07.0"}
  "core"
  "cryptokit"
  "dolog"
  "ocamlgraph"
  "ppx_let"
  "dune" {build}
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name]
]
synopsis: "Authenticated encryption prover / synthesizer"
